--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,8 +5,5 @@
     box-sizing: border-box;
 }
 
-
-/* Utility classes */
-.u-full-height {
-    height: 100%;
-}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
