--- a/src/app/angular/angular-documentation.component.scss
+++ b/src/app/angular/angular-documentation.component.scss
@@ -2,4 +2,47 @@
     display: flex;
     flex-direction: column;
     align-items: stretch;
+    height: 100%;
+}
+
+.flex-grow-1 {
+    flex-grow: 1;
+}
+  
+.body {
+    display: grid;
+    height: 100%;
+
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 5fr;
+
+    grid-gap: 20px;
+}
+
+.sidenav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__img {
+        height: 200px;
+    }
+
+    &--container {
+        background-color: #1976d2;
+    }
+
+    &__title {
+        color: #eee;
+        font-size: 20px;
+        padding: 10px;
+    }
+}
+
+.docs {
+
+    &--container {
+        // background-color: bisque;
+        padding: 20px;
+    }
 }
