Mid check in for sharing

--- a/src/app/angular/documents/getting-started/getting-started.component.html
+++ b/src/app/angular/documents/getting-started/getting-started.component.html
@@ -17,7 +17,7 @@
                 Create new project
             </h3>
             <div class="message">
-                <p class="message__item">Create a new project in Angular using Angular CLI.</p>
+                <p class="message__item">Create a new project in Angular using Angular CLI. </p>
                 <app-terminal [content]="'npm new my-app'"></app-terminal>
             </div>
         </div>
@@ -28,8 +28,8 @@
             </h3>
             <div class="message">
                 <p class="message__item">The ng serve command launches the server, watches your files, and rebuilds the app as you make changes to those files.</p>
-                
                 <app-terminal [content]="'ng serve --open'"></app-terminal>
+                <!-- <app-table></app-table> -->
             </div>
         </div>   
     </div>
