--- a/src/app/angular/table/table.component.html
+++ b/src/app/angular/table/table.component.html
@@ -1,1 +1,12 @@
-<p>table works!</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th class="table__header" *ngFor="let def of columnDef">{{ def.title }}</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let record of data">
+            <td class="table__row" *ngFor="let def of columnDef">{{ record[def.propertyName] }}</td>
+        </tr>
+    </tbody>
+</table>
